--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,31 +8,28 @@ a {
     text-decoration: none;
 }
 
-p {
-    font-size: 16px;
-}
-
 body {
     background-color: #d9dcd6;
 }
  /* header style */
 
-.header {
+header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
 
-.header h1 {
+header h1 {
         font-size: 48px;
+        display: inline-block;
 }
 
-.header h1 .seo {
+header h1 .seo {
     color: #d9dcd6;
 }
 
-.header div {
+header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -40,15 +37,18 @@ body {
     font-size: 20px;
 }
 
-.header div ul {
+header nav ul {
     list-style-type: none;
 }
 
-.header div ul li {
+header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
-
+/* moved p for nav section */
+p {
+    font-size: 16px;
+}
 /* style for hero */
 .hero {
     height: 800px;
@@ -70,7 +70,7 @@ body {
 }
 
 /* style for content */
-.content {
+.services {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
@@ -84,11 +84,11 @@ body {
     color: #ffffff;
 }
 
-.img {
+.service img {
     max-height: 200px;
 }
 
-.h2 {
+.service h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
@@ -106,17 +106,17 @@ body {
     background-color: #2589bd;
 }
 
-.benefit-style {
+.benefit {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-style h3 {
+.benefit h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-style img {
+.benefit img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
