--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,139 +1,144 @@
+/* styles for Horiseon index.html */
+
 * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
-}
-a {
+  }
+  
+   a {
     color: #ffffff;
     text-decoration: none;
-}
-
-body {
+  }
+  
+  body {
     background-color: #d9dcd6;
-}
- /* header style */
+  }
 
-header {
+  p {
+    font-size: 16px;
+  }
+  
+
+  /* header section */
+  header {
     padding: 20px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+      "Lucida Sans", Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
-}
-
-header h1 {
-        font-size: 48px;
-        display: inline-block;
-}
-
-header h1 .seo {
+  }
+  
+  header h1 {
+    display: inline-block;
+    font-size: 48px;
+  }
+  
+  header h1 .seo {
     color: #d9dcd6;
-}
-
-header nav {
+  }
+  
+  /*nav section */
+  header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
     font-size: 20px;
-}
-
-header nav ul {
+  }
+  
+  header nav ul {
     list-style-type: none;
-}
-
-header nav ul li {
+  }
+  
+  header nav ul li {
     display: inline-block;
     margin-left: 25px;
-}
-/* moved p for nav section */
-p {
-    font-size: 16px;
-}
-/* style for hero */
-.hero {
-    height: 800px;
-    width: 100%;
-    margin-bottom: 25px;
-    background-image: url("../images/digital-marketing-meeting.jpg");
-    background-size: cover;
-    background-position: center;
-}
-
-.float-left {
-    float: left;
-    margin-right: 25px;
-}
-
-.float-right {
-    float: right;
-    margin-left: 25px;
-}
-
-/* style for content */
-.services {
-    width: 75%;
-    display: inline-block;
-    margin-left: 20px;
-}
-.service {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
+  }
+  
+  /* benefit section*/
+  
+  .benefit {
+    margin-bottom: 32px;
     color: #ffffff;
-}
-
-.service img {
-    max-height: 200px;
-}
-
-.service h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-
-/* style for benefits */
-.benefits {
+  }
+  
+  .benefit h3 {
+    margin-bottom: 10px;
+    text-align: center;
+  }
+  
+  .benefit img {
+    display: block;
+    margin: 10px auto;
+    max-width: 150px;
+  }
+  
+  .benefits {
     margin-right: 20px;
     padding: 20px;
     clear: both;
     float: right;
     width: 20%;
     height: 100%;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
     background-color: #2589bd;
-}
-
-.benefit {
-    margin-bottom: 32px;
+  }
+  
+  .float-left {
+    float: left;
+    margin-right: 25px;
+  }
+  
+  .float-right {
+    float: right;
+    margin-left: 25px;
+  }
+  
+ 
+  /* hero section */
+  .hero {
+    height: 800px;
+    width: 100%;
+    margin-bottom: 25px;
+    background-image: url("../images/digital-marketing-meeting.jpg");
+    background-size: cover;
+    background-position: center;
+  }
+  
+  /*service section */
+  .service {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+    background-color: #0072bb;
     color: #ffffff;
-}
+  }
+  .service img {
+    max-height: 200px;
+  }
+  
+  .service h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
+  }
+  
+  .services {
+    width: 75%;
+    display: inline-block;
+    margin-left: 20px;
+  }
 
-.benefit h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-/* area for footer */
-.footer {
+   /*footer section */
+   .footer {
     padding: 30px;
     clear: both;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+      "Lucida Sans", Arial, sans-serif;
     text-align: center;
-}
-
-.footer h2 {
+  } 
+  
+  .footer h2 {
     font-size: 20px;
-}
-
-
-
-
+  }
